test/testdata/classes/methods/instance/missing_4_args_error.lox
class Foo {
  add(a, b, c, d) {
    print a + b + c + d;
  }
}

Foo().add(); // error: Foo.add() missing 4 arguments: a, b, c, and d
